# SmartCockpit_Project

./: .editorconfig  .gitignore  AUTHORS  CHANGELOG.md  CMakeLists.txt  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DESIGN.docx  DESIGN.md  LICENSE  Makefile  README.md  scheduler.cpp  scheduler_20260518_002235.jsonl
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
docs/: DESIGN.md  README.md  README_ar.md  README_en.md  README_ja.md  README_ru.md
examples/: run_demo.sh
include/voyah/: version.h
src/: CMakeLists.txt  scheduler.cpp
test/: test_boundary.sh  test_concurrent.sh  test_dynamic.sh  test_graceful.sh  test_jsonl.sh  test_perf.sh  test_signal.sh  test_stress.sh  test_timeout_retry.sh
